update logstash course